Initial commit. Skeleton of site. Getting a feel of how things are going to look

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
   <title>Bubl | Home</title>
 </head>
 <body>
-  
+  <section class = "Bubl text">
+    <h1>Bubl</h1>
+  </section>
+  <div class = "navigation-bar">
+    <nav>
+      <a href ="#">Home</a>
+      <a href ="about.html">About</a>
+      <a href ="#">Students</a>
+      <a href ="#">FAQ</a>
+      <a href ="#">Contact</a>
+    </nav>
+    <button class = "cta-login">Sign Up</button>
+  </div>
+
+  <div class = "home-content">
+    <h2>Welcome to Bubl.</h2>
+    <p>Where the transition to high school is made easier.</p>
+  </div>
+
+
 </body>
 </html>
