Initial commit. Skeleton of site. Getting a feel of how things are going to look

--- a/about.html
+++ b/about.html
@@ -5,8 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bubl | About</title>
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  
+    <section class = "Bubl-text">
+        <h1>Bubl</h1>
+      </section>
+      <div class = "navigation-bar">
+        <nav>
+          <a href ="index.html">Home</a>
+          <a href ="about.html">About</a>
+          <a href ="students.html">Students</a>
+          <a href ="#">FAQ</a>
+          <a href ="contact.html">Contact</a>
+        </nav>
+        <button class = "cta-login">Sign Up</button>
+      </div>
 </body>
 </html>
