--- a/about.html
+++ b/about.html
@@ -22,5 +22,13 @@
         </nav>
         <button class = "cta-login">Sign Up</button>
       </div>
+
+      <div class ="about-us">
+        <h2>About Us</h2>
+        <p>Bubl helps Middle School students who are transitioning to High School develop relationships with other students with similar interests in a controlled environment.</p>
+        <p>By providing space for students to have topical discussions and develop a sense of identity among their student body.</p>
+        <p>Our mission is to increase a sense of belonging and reduce social anxiety amongst new High School students.</p>
+        <img class="main-img"src="img/undraw_learning_2q1h.png"alt="kids images">
+      </div>
 </body>
 </html>
