About and Index pages are updated with colors and images.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <section class = "Bubl-text">
-    <h1>Bubl</h1>
-  </section>
-  <div class = "navigation-bar">
-    <nav>
+  <!-- <section>
+    
+  </section> -->
+  <div>
+    <nav class = "navigation-bar">
+      <h1 class = "Bubl-text">Bubl</h1>
       <a href ="index.html">Home</a>
       <a href ="about.html">About</a>
       <a href ="students.html">Students</a>
@@ -23,7 +24,7 @@
     </nav>
     <button class = "cta-login">Sign Up</button>
   </div>
-  <img class="main-img"src="img/undraw_learning_2q1h.png"alt="kids images">
+  <img class="main-img" src="assets/img/undraw_learning_2q1h.png" alt="kids images">
   <div class = "home-content">
     <h2>Welcome to Bubl.</h2>
     <p>Where the transition to high school is made easier.</p>
