--- a/about.html
+++ b/about.html
@@ -9,26 +9,36 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <section class = "Bubl-text">
-        <h1>Bubl</h1>
-      </section>
-      <div class = "navigation-bar">
-        <nav>
-          <a href ="index.html">Home</a>
-          <a href ="about.html">About</a>
-          <a href ="students.html">Students</a>
-          <a href ="#">FAQ</a>
-          <a href ="contact.html">Contact</a>
-        </nav>
-        <button class = "cta-login">Sign Up</button>
+    <div>
+        <nav class = "navigation-bar">
+            <h1 class = "Bubl-text">Bubl</h1>
+            <a href ="index.html">Home</a>
+            <a href ="about.html">About</a>
+            <!-- <a href ="students.html">Students</a> -->
+            <a href ="contact.html">Contact</a>
+            <a href ="#">Sign Up</a>
+          </nav> 
       </div>
-
       <div class ="about-us">
         <h2>About Us</h2>
         <p>Bubl helps Middle School students who are transitioning to High School develop relationships with other students with similar interests in a controlled environment.</p>
         <p>By providing space for students to have topical discussions and develop a sense of identity among their student body.</p>
         <p>Our mission is to increase a sense of belonging and reduce social anxiety amongst new High School students.</p>
-        <img class="main-img"src="assets/img/undraw_true_friends_c94g.png"alt="kids images">
+        <img class="main-img"src="assets/img/undraw_true_friends_c94g.png" height="200" width= "466"alt="kids images">
       </div>
+
+      <div class ="team">
+        <h2>Meet the Team</h2>
+        <h3>Chinaemere Ike - UI Developer</h3>
+        <h3>Nick C - Team Lead</h3>
+        <h3>Julie - UI Developer</h3>
+        <h3>Jada - UI Developer</h3>
+        <h3>Ben - React/Backend Developer</h3>
+        <h3>Terrell - Backend Developer</h3>
+      </div>
+
+      <footer class="footer">
+          <p>Copyright Bubl 2019</p>
+      </footer>
 </body>
 </html>
