--- a/index.html
+++ b/index.html
@@ -18,23 +18,28 @@
       <h1 class = "Bubl-text">Bubl</h1>
       <a href ="index.html">Home</a>
       <a href ="about.html">About</a>
-      <a href ="students.html">Students</a>
-      <a href ="#">FAQ</a>
+      <!-- <a href ="students.html">Students</a> -->
       <a href ="contact.html">Contact</a>
+      <a href ="#">Sign Up</a>
     </nav>
-    <button class = "cta-login">Sign Up</button>
+    <!-- <button class = "cta-login">Sign Up</button> -->
   </div>
-  <img class="main-img" src="assets/img/undraw_learning_2q1h.png" alt="kids images">
+  <img class="main-img" src="assets/img/undraw_learning_2q1h.png" height = "400" width= "600"alt="kids images">
   <div class = "home-content">
     <h2>Welcome to Bubl.</h2>
     <p>Where the transition to high school is made easier.</p>
     <button>Join Us</button>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <p>Are you nervous abolut making that big leap to high school? Don't be! We've all been there and that's why Bubl is here to help.</p>
+    <img class="main-img" src="assets/img/undraw_true_friends_c94g.png" height = "400" width= "500"alt="kids images">
+    <p>Meet your fellow classmates here on  Bubl. You can select your school, class year and connect with students at your school!</p>
+    <img class="main-img" src="assets/img/undraw_brainstorming_49d4.png" height = "400" width= "500"alt="kids images">
+    <p>Join different channels for study groups, pep rallies and student organizations!</p>
+    <img class="main-img" src="assets/img/undraw_teacher_35j2.png" height = "400" width= "500"alt="kids images">
+    <p>Are you having an issue with an assignment? Need guidance on a project? Teachers and staff have accounts her on Bubl and are easily accesible.</p>
   </div>
 
-
+  <footer class="footer">
+      <p>Copyright Bubl 2019</p>
+  </footer>
 </body>
 </html>
