--- a/students.html
+++ b/students.html
@@ -10,19 +10,16 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <section class = "Bubl-text">
-    <h1>Bubl</h1>
-  </section>
-  <div class = "navigation-bar">
-    <nav>
-      <a href ="index.html">Home</a>
-      <a href ="about.html">About</a>
-      <a href ="students.html">Students</a>
-      <a href ="#">FAQ</a>
-      <a href ="contact.html">Contact</a>
-    </nav>
-    <button class = "cta-login">Sign Up</button>
-  </div>
+        <div>
+                <nav class = "navigation-bar">
+                        <h1 class = "Bubl-text">Bubl</h1>
+                        <a href ="index.html">Home</a>
+                        <a href ="about.html">About</a>
+                        <!-- <a href ="students.html">Students</a> -->
+                        <a href ="contact.html">Contact</a>
+                        <a href ="#">Sign Up</a>
+                      </nav>
+              </div>
 
 <div class = "student-names">
     <h3>Chinaemere Ike</h3>
