Signup connected to the site.

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <a href ="about.html">About</a>
             <!-- <a href ="students.html">Students</a> -->
             <a href ="contact.html">Contact</a>
-            <a href ="#">Sign Up</a>
+            <a href ="https://bubl-benjamin-rogers.netlify.com/login">Sign Up</a>
           </nav> 
       </div>
       <div class ="about-us">
