--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href ="about.html">About</a>
       <!-- <a href ="students.html">Students</a> -->
       <a href ="contact.html">Contact</a>
-      <a href ="#">Sign Up</a>
+      <a href ="https://bubl-benjamin-rogers.netlify.com/login">Sign Up</a>
     </nav>
     <!-- <button class = "cta-login">Sign Up</button> -->
   </div>
