--- a/students.html
+++ b/students.html
@@ -17,7 +17,7 @@
                         <a href ="about.html">About</a>
                         <!-- <a href ="students.html">Students</a> -->
                         <a href ="contact.html">Contact</a>
-                        <a href ="#">Sign Up</a>
+                        <a href ="https://bubl-benjamin-rogers.netlify.com/login">Sign Up</a>
                       </nav>
               </div>
 
