About us page updated with team members full names and roles.

--- a/about.html
+++ b/about.html
@@ -24,17 +24,17 @@
         <p>Bubl helps Middle School students who are transitioning to High School develop relationships with other students with similar interests in a controlled environment.</p>
         <p>By providing space for students to have topical discussions and develop a sense of identity among their student body.</p>
         <p>Our mission is to increase a sense of belonging and reduce social anxiety amongst new High School students.</p>
-        <img class="main-img"src="assets/img/undraw_true_friends_c94g.png" height="200" width= "466"alt="kids images">
+        <img class="main-img"src="assets/img/undraw_group_selfie_ijc6.png" height="400" width= "466"alt="kids images">
       </div>
 
       <div class ="team">
         <h2>Meet the Team</h2>
+        <h3>Nick Cannariato - Team Lead</h3>
         <h3>Chinaemere Ike - UI Developer</h3>
-        <h3>Nick C - Team Lead</h3>
-        <h3>Julie - UI Developer</h3>
-        <h3>Jada - UI Developer</h3>
-        <h3>Ben - React/Backend Developer</h3>
-        <h3>Terrell - Backend Developer</h3>
+        <h3>Julie Thrall Stewart - UI Developer</h3>
+        <h3>Jada Broome - UI Developer</h3>
+        <h3>Ben Rogers- React/ Frontend Engineer</h3>
+        <h3>Terrell Tullis- Backend Engineer</h3>
       </div>
 
       <footer class="footer">
